// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders conditional styles 1`] = `
.c0 {
  background: #FFF;
  border-radius: 5px;
  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 65rem;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-top: 0rem;
  margin-left: 0rem;
  padding: 0rem;
  width: 32.5rem;
}

<form
  className="c0"
  height="65rem"
  width="32.5rem"
/>
`;

exports[`renders default conditional styles 1`] = `
.c0 {
  background: transparent;
  border-radius: 5px;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-top: 1rem;
  margin-left: 1rem;
  padding: 1rem;
  width: 100%;
}

<form
  className="c0"
  height="auto"
  width="100%"
/>
`;
